horgand ChangeLog



== v1.07 (  /  /2004) ==
---------------------------------------------------------------------------------------------
- Fixed bug in bass tune when jackd changes the default samplerate.
- Clean code.
- removed realtime priority's
- Changed shed.priority
- Default Bank modified.
- Improved Reverb.
- Improved Rotary effect.
- Auto adjust internal sample rate to jackd sample rate. 




== v1.06 (13/02/2004) ==
---------------------------------------------------------------------------------------------
- Modified sounds.
- Added Volume for organ section.
- Master Volume now control the whole organ.
- Update jack-process
- Fixed bug in change programs.
- Added more sounds.
- Improved Tremolo Speed.
- Added drawbar conversion to marimba
- Improved ADSR.
- Man File updated.
- Fixed bug in command line.
- Split source code for future development.
- File format changed, new default bank released.
- Improved Detune for stereo effect.
- Sound engine changed (20 Carriers) (10x2)(stereo)




== v1.05 (19/01/2004) ==
---------------------------------------------------------------------------------------------
- Added GPL headers in sources.
- Fixed bug in auto-connect, now connect into the specified port.
- Improved Menus.
- Fixed Bug in compare and Load functions.
- Fixed Bug in Undo/Redo.
- Fixed Bug in new function.
- Optimized for low graphic resolutions
- Rotary improved.
- Changes programs without stop rhythm.
- Added Change program in main window.
- Small Changes in look.
- Added and Changed Default Sound Bank.
- Fixed Bug in Start/Stop
- Fixed bug in bar led.
- Select Rhythm 1 at start.
- Load Bank 1 at start if ni command line provided.
- Optimized code to fix format strings.
- Drastically reduced the amount of memory needed.
- Main window re-sizable.
- Added memory lock.
- Added FIFO real-time priority.
- Improved Graphic Speed.
 


== v1.04 (20/12/2003) ==