@@ -1,26 +1,26 @@
-1,0.006340,0.570000,0
-3,0.003658,0.990000,0
-14,0.015850,0.390000,0
-8,0.002972,0.570000,0
-19,-0.006340,0.000000,0
-4,0.001321,0.680000,0
-4,0.001132,0.890000,1
-5,0.001081,0.880000,1
-19,-0.003522,0.000000,0
-22,-0.001585,0.000000,0
-1,-0.006340,0.570000,0
-3,-0.003658,0.990000,0
-14,-0.015850,0.390000,0
-8,-0.002972,0.570000,0
-19,0.006340,0.000000,0
-4,-0.001321,0.680000,0
-4,-0.001132,0.890000,1
-5,-0.001081,0.880000,1
-19,0.003522,0.000000,0
-22,0.001585,0.000000,0
-0.650000,12,19.420000,5.600000,10.800000,1,11.280000,8.110236
-0.001200,1.000000,95.099998,0,14112.000000,0.090000
-0,0,99.000000,6.000000,2.990000,99.000000,0.240000
+1,0.006667,0.260000,0
+3,0.003846,0.990000,0
+14,0.016667,0.000000,0
+8,0.003125,0.810000,0
+19,-0.006667,0.000000,0
+4,0.001389,0.990000,0
+4,0.001190,0.990000,1
+5,0.001136,0.990000,1
+13,-0.003704,0.370000,1
+22,-0.001667,0.000000,0
+1,-0.006667,0.260000,0
+3,-0.003846,0.990000,0
+14,-0.016667,0.000000,0
+8,-0.003125,0.810000,0
+19,0.006667,0.000000,0
+4,-0.001389,0.990000,0
+4,-0.001190,0.990000,1
+5,-0.001136,0.990000,1
+13,0.003704,0.370000,1
+22,0.001667,0.000000,0
+0.650000,12,19.420000,5.600000,10.800000,1,11.370000,10.000000
+0.000000,1.000000,100.000000,0,14112.000000,0.090000
+0,1,99.000000,6.000000,0.770000,99.000000,0.700000
 Benet 1
 ---
 3,0.000000,0.990000,0
